<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp_Page"
    android:orientation="vertical"
    >


  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:gravity="center"
      android:text="@string/create_your_account"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="Suspicious0dp" />

  <EditText
      android:id="@+id/etName"
      android:layout_width="334dp"
      android:layout_height="45dp"
      android:layout_gravity="center"
      android:layout_marginBottom="24dp"
      android:background="@drawable/edittext_design"
      android:hint="@string/name"
      android:inputType="textPersonName"
      android:paddingStart="15dp"
      app:layout_constraintBottom_toTopOf="@+id/etEmail"
      app:layout_constraintEnd_toEndOf="@+id/textView6"
      app:layout_constraintStart_toStartOf="@+id/textView6"
      tools:ignore="MissingConstraints,RtlSymmetry" />

  <EditText
      android:id="@+id/etEmail"
      android:layout_width="334dp"
      android:layout_height="45dp"
      android:layout_gravity="center"
      android:layout_marginBottom="24dp"
      android:background="@drawable/edittext_design"
      android:drawableStart="@drawable/ic_email"
      android:drawablePadding="8dp"
      android:hint="@string/enter_your_e_mail_address"
      android:inputType="textEmailAddress"
      android:paddingStart="10dp"
      app:layout_constraintBottom_toTopOf="@+id/etPassword"
      app:layout_constraintEnd_toEndOf="@+id/etName"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="@+id/etName"
      tools:ignore="RtlSymmetry" />

  <EditText
      android:id="@+id/etPassword"
      android:layout_width="334dp"
      android:layout_height="45dp"
      android:layout_gravity="center"
      android:layout_marginBottom="16dp"
      android:background="@drawable/edittext_design"
      android:drawableStart="@drawable/ic_lock"
      android:drawableEnd="@drawable/password_icon"
      android:drawablePadding="8dp"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      app:layout_constraintBottom_toTopOf="@+id/textView7"
      app:layout_constraintEnd_toEndOf="@+id/etEmail"
      app:layout_constraintStart_toStartOf="@+id/etEmail"
      tools:ignore="RtlSymmetry" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="12dp"
      android:text="@string/password_with_6_or_more_characters"
      android:textColor="@color/black"
      android:textSize="14sp"
      app:layout_constraintBottom_toTopOf="@+id/etConfirmPassword"
      app:layout_constraintEnd_toEndOf="@+id/etPassword"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/etPassword" />

  <EditText
      android:id="@+id/etConfirmPassword"
      android:layout_width="334dp"
      android:layout_height="45dp"
      android:layout_gravity="center"
      android:layout_marginBottom="40dp"
      android:background="@drawable/edittext_design"
      android:drawableStart="@drawable/ic_lock"
      android:drawableEnd="@drawable/password_icon"
      android:drawablePadding="8dp"
      android:hint="@string/confirm_password"
      android:inputType="textPassword"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      app:layout_constraintBottom_toTopOf="@+id/btnNext"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.493"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/btnNext"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="256dp"
      android:background="@drawable/continue_with_button"
      android:backgroundTint="@color/Google"
      android:text="@string/next"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/etConfirmPassword"
      app:layout_constraintStart_toStartOf="@+id/etConfirmPassword"
      tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>